<resources>
    <string name="app_name">MC Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">MultiversX Transactions</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    
    <!-- Blockchain strings -->
    <string name="registration_fees">Registration Fees</string>
    <string name="regular_fee">Regular Fee:</string>
    <string name="vip_fee">VIP Fee:</string>
    <string name="regular_participants">Regular Participants</string>
    <string name="vip_participants">VIP Participants</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="vip">VIP</string>
    <string name="egld_format">%s EGLD</string>
    <string name="loading">Loading…</string>
    <string name="error_loading">Error loading data</string>
    <string name="no_participants">No participants yet</string>
    
    <!-- Transaction strings -->
    <string name="account_info">Account Information</string>
    <string name="account_balance">Balance:</string>
    <string name="account_nonce">Nonce:</string>
    <string name="transactions_title">Recent Transactions</string>
    <string name="transaction_hash">Hash:</string>
    <string name="transaction_from">From:</string>
    <string name="transaction_to">To:</string>
    <string name="transaction_value">Value:</string>
    <string name="transaction_fee">Fee:</string>
    <string name="transaction_status">Status:</string>
    <string name="no_transactions">No transactions found</string>
    <string name="view_transactions">View Transactions</string>
    
    <!-- Error messages -->
    <string name="error_loading_account">Error loading account: %s</string>
    <string name="no_transactions_found">No transactions found</string>
    <string name="unable_to_load_transactions">Unable to load transactions</string>
    <string name="error_generic">Error: %s</string>
    <string name="unknown_error">Unknown error</string>
    
    <!-- Election creation -->
    <string name="create_election_title">Create New Election</string>
    <string name="election_name">Election Name</string>
    <string name="election_description">Election Description</string>
    <string name="election_type">Election Type</string>
    <string name="election_type_single">Single Choice (voters select one candidate)</string>
    <string name="election_type_multiple">Multiple Choice (voters select multiple candidates)</string>
    <string name="election_type_ranked">Ranked Choice (voters rank candidates by preference)</string>
    <string name="start_date_time">Start Date &amp; Time</string>
    <string name="end_date_time">End Date &amp; Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="no_date_selected">No date selected</string>
    <string name="create_election">Create Election</string>
    <string name="create_election_button">Create Election</string>
    
    <!-- Election creation errors -->
    <string name="error_empty_name">Election name cannot be empty</string>
    <string name="error_empty_description">Election description cannot be empty</string>
    <string name="error_no_start_date">Please select a start date and time</string>
    <string name="error_no_end_date">Please select an end date and time</string>
    <string name="error_invalid_dates">Start date must be before end date</string>
    <string name="error_past_start_date">Start date must be in the future</string>
    <string name="error_creating_election">Error creating election: %s</string>
    <string name="election_created_success">Election created successfully!</string>
    <string name="creating_election">Creating election…</string>
    
    <!-- Bottom Navigation -->
    <string name="nav_transactions">Transactions</string>
    <string name="nav_elections">Elections</string>
    <string name="nav_profile">Profile</string>
</resources>