<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SecondFragment">

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.vti.mcproject.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_CreateElectionFragment"
            app:destination="@id/CreateElectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.vti.mcproject.FirstFragment"
        android:label="@string/nav_elections"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_CreateElectionFragment"
            app:destination="@id/CreateElectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/CreateElectionFragment"
        android:name="com.vti.mcproject.CreateElectionFragment"
        android:label="@string/create_election_title"
        tools:layout="@layout/fragment_create_election" />
</navigation>